--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 <!--      <button id="turnOnLed" type="button">Turn On LED</button>-->
 <!--      <button id="turnOffLed" type="button">Turn Off LED</button>-->
 <!--    </div>-->
-<!--<form action="/signup" method="post" id="signup">-->
-<!--    <input type="text" id="fname" value="Mike"><br><br>-->
-<!--    <input type="submit" value="Submit">-->
-<!--</form>-->
-
-<form action="/po" method="post" id="signup">
-    <h1>Sign Up</h1>
-    <div class="field">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your fullname" />
-        <small></small>
-    </div>
-    <div class="field">
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="Enter your email address" />
-        <small></small>
-    </div>
-    <button type="submit">Subscribe</button>
+<form action="/po" method="post">
+    <input type="text" id="cha" name="cha" value=""><br>
+    <input type="submit" value="Submit">
 </form>
+
+<!--<form action="/po" method="post" id="signup">-->
+<!--    <h1>Sign Up</h1>-->
+<!--    <div class="field">-->
+<!--        <label for="name">Name:</label>-->
+<!--        <input type="text" id="name" name="name" placeholder="Enter your fullname" />-->
+<!--        <small></small>-->
+<!--    </div>-->
+<!--    <div class="field">-->
+<!--        <label for="email">Email:</label>-->
+<!--        <input type="text" id="email" name="email" placeholder="Enter your email address" />-->
+<!--        <small></small>-->
+<!--    </div>-->
+<!--    <button type="submit">Subscribe</button>-->
+<!--</form>-->
 
 </body>
 
